--- a/templates/aws-mirovoy-ref-arch-03-rds.yaml
+++ b/templates/aws-mirovoy-ref-arch-03-rds.yaml
@@ -101,7 +101,7 @@ Parameters:
   DatabaseMasterUsername:
     AllowedPattern: ^([a-zA-Z0-9]*)$
     ConstraintDescription: "Must contain only alphanumeric characters
-      (minimum 8; maximum 16)."
+      (maximum 32)."
     Default: root
     Description: The "root" user to configure for the Amazon RDS database.
     MaxLength: 32
@@ -245,3 +245,5 @@ Outputs:
     Value: !GetAtt ReadReplicaDB.Endpoint.Address
     Export:
       Name: !Sub "${AWS::StackName}-ReplicaDBEndpoint"
+  StackName:
+    Value: !Ref "AWS::StackName"
