--- a/templates/aws-mirovoy-ref-arch-01-newvpc.yaml
+++ b/templates/aws-mirovoy-ref-arch-01-newvpc.yaml
@@ -421,3 +421,8 @@ Outputs:
       !If [NumberOfAZs1, !Ref PublicSubnet1,
            !Join [',', [!Ref PublicSubnet1, !Ref PublicSubnet2]]
       ]
+  StackName:
+    Export:
+      Name: StackName
+    Value:
+      !Ref "AWS::StackName"
