--- a/templates/aws-mirovoy-ref-arch-flurdy-mail-master.yaml
+++ b/templates/aws-mirovoy-ref-arch-flurdy-mail-master.yaml
@@ -292,10 +292,12 @@ Parameters:
       selected is where the primary mail server will go).'
     Type: List<AWS::EC2::AvailabilityZone::Name>
   BackupLogSnapshot:
+    Default: ""
     Description: The snapshot name from which to restore /var/log for the
       backup mail server.
     Type: String
   BackupSpoolSnapshot:
+    Default: ""
     Description: The snapshot name from which to restore /var/spool for the
       backup mail server
     Type: String
@@ -470,12 +472,12 @@ Parameters:
     Type: String
   MailDBUser:
     AllowedPattern: ^([a-zA-Z0-9]*)$
-    Default: mailadmin
+    Default: mail
     Description: The MySQL username to have access to the mail database.
     ConstraintDescription: 'Must contain only alphanumeric characters and be at
-      least 8 characters.'
-    MaxLength: 16
-    MinLength: 8
+      maximum 32 characters.'
+    MaxLength: 32
+    MinLength: 1
     Type: String
   MailS3KeyPrefix:
     AllowedPattern: "^([0-9a-zA-Z-]+/)*$"
