Added top level master file.
Many changes to get parameters to work when they're left blank, and to
get everything to work with the various optional configurations (i.e.,
filling in "mandatory parameters" should be enough to get things to go).

Removed ability to configure SSL in any way other than through LetsEncrypt.

--- a/templates/aws-mirovoy-ref-arch-02-mail-storage.yaml
+++ b/templates/aws-mirovoy-ref-arch-02-mail-storage.yaml
@@ -104,6 +104,7 @@ Parameters:
     MinValue: 1
     Type: Number
   LogSnapshot:
+    Default: ""
     Description: The snapshot name from which to restore /var/log
     Type: String
   LogDelPolicy:
@@ -130,6 +131,7 @@ Parameters:
     MinValue: 1
     Type: Number
   SpoolSnapshot:
+    Default: ""
     Description: The snapshot name from which to restore /var/spool
     Type: String
   SwapSize:
