--- a/templates/aws-mirovoy-ref-arch-04-mail.yaml
+++ b/templates/aws-mirovoy-ref-arch-04-mail.yaml
@@ -2396,7 +2396,7 @@ Resources:
         config_amavisd:
           packages:
             yum:
-              amavisd-new: []
+              amavis: []
           files:
             /tmp/amavisd_extra.cf:
               content: !Sub
